--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "chatpoint",
   "version": "1.0.0",
   "description": "ChatPoint - Grocery ordering and delivery app",
-  "main": "server.cjs",
+  "main": "server.js",
   "scripts": {
-    "start": "node server.cjs",
-    "dev": "nodemon server.cjs"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [
     "chatpoint",
